# ct-sentimentoor

./: .gitignore  Cargo.toml  LICENSE  README.md  sentimentoor.json.example
src/: config.rs  main.rs  sentiment.rs  twitter.rs
