[package]
name = "ct-sentimentoor"
version = "0.1.0"
edition = "2021"
authors = ["zkmaestro@protonmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
